[ISSUE #14078] Implement cluster-wide state synchronization (#14101)
* feat(plugin): implement cluster-wide state synchronization

* feat(plugin): implement state synchronizer interface and remove availability monitor

  - Implement PluginStateSynchronizer interface with Raft and Standalone implementations
  - Add mode-specific conditional annotations
  - Remove PluginAvailabilityMonitor and related RPC components